# src/main/java/es/iesjandula/reservascarritos/models/Reservas.java
@@ -1,20 +1,42 @@
 package es.iesjandula.reservascarritos.models;
 
+import lombok.Getter;
+import lombok.Setter;
+
 import java.util.List;
 
+/**
+ * @author Joaquin Moreno
+ *
+ * Clase Reservas
+ *
+ * Almacena todas las reservas
+ */
+@Getter
+@Setter
 public class Reservas
 {
+    /** Atributo - lista con todas las reservas de las aulas informaticas. */
     private List<ReservaAula> reservaAulaList;
 
+    /** Atributo - lista con todas las reservas de carritos de pcs. */
     private  List<ReservaCarritoPcs>reservaCarritoPcsList;
 
+    /** Atributo - lista con todas las reservas de carritos de tablets. */
     private List<ReservaCarritoTablets>reservaCarritoTabletsList;
 
+    /** Constructor vacio */
     public Reservas()
     {
 
     }
 
+    /**
+     * /** Constructor por parametros
+     * @param reservaAulaList con la lista con todas las reservas de las aulas informaticas.
+     * @param reservaCarritoPcsList con la lista con todas las reservas de carritos de pcs.
+     * @param reservaCarritoTabletsList con la lista con todas las reservas de carritos de tablets.
+     */
     public Reservas(List<ReservaAula> reservaAulaList, List<ReservaCarritoPcs> reservaCarritoPcsList, List<ReservaCarritoTablets> reservaCarritoTabletsList)
     {
         this.reservaAulaList = reservaAulaList;
@@ -22,33 +44,4 @@ public class Reservas
         this.reservaCarritoTabletsList = reservaCarritoTabletsList;
     }
 
-    public List<ReservaAula> getReservaAulaList()
-    {
-        return reservaAulaList;
-    }
-
-    public void setReservaAulaList(List<ReservaAula> reservaAulaList)
-    {
-        this.reservaAulaList = reservaAulaList;
-    }
-
-    public List<ReservaCarritoPcs> getReservaCarritoPcsList()
-    {
-        return reservaCarritoPcsList;
-    }
-
-    public void setReservaCarritoPcsList(List<ReservaCarritoPcs> reservaCarritoPcsList)
-    {
-        this.reservaCarritoPcsList = reservaCarritoPcsList;
-    }
-
-    public List<ReservaCarritoTablets> getReservaCarritoTabletsList()
-    {
-        return reservaCarritoTabletsList;
-    }
-
-    public void setReservaCarritoTabletsList(List<ReservaCarritoTablets> reservaCarritoTabletsList)
-    {
-        this.reservaCarritoTabletsList = reservaCarritoTabletsList;
-    }
 }
